--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/Steering-wheel2.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Martin Flynn Driver Training"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Steering-wheel2.svg" />
+    <meta name="og:image" content="%PUBLIC_URL%/logo.png"/>
+    <meta property="business:contact_data:country_name" content="United Kingdom" />
+    <meta property="business:contact_data:locality" content="Telford" />
+    <meta property="business:contact_data:region" content="1492" />
+    <meta property="business:contact_data:email" content="martinflynn1@talktalk.net" />
+    <meta property="business:contact_data:postal_code" content="TF1 6ZY" />
+    <meta property="business:contact_data:phone_number" content=" 7890040309" />
+
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#dc4b44">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <title>Martin Flynn Driver Training</title>
   </head>
   <body>
